# ZipInfoCpp

./: .editorconfig  .gitignore  CMakeLists.txt  ReadMe.md  ZipInfoCpp.props  ZipInfoCpp.sln
.github/workflows/: msvc.yml
Application/: Application.vcxproj  Main.cpp  StopWatch.hpp  ZIP.cpp  ZIP.hpp
src/: CMakeLists.txt  IO.hpp  Main.cpp  PCH.hpp  StopWatch.hpp  ZIP.cpp  ZIP.hpp
